add support for global add_limit set resources with primary key to w_d merge add e2e test pokespec

--- a/dlt_openapi/renderer/default/templates/pipeline.py.j2
+++ b/dlt_openapi/renderer/default/templates/pipeline.py.j2
@@ -11,5 +11,9 @@ if __name__ == "__main__":
         full_refresh=False,
         export_schema_path="schemas/export"
     )
-    info = pipeline.run({{ source_name }}())
+    source = {{ source_name }}()
+    {% if global_limit %}
+    source.add_limit({{global_limit}})
+    {% endif %}
+    info = pipeline.run(source)
     print(info)
