--- a/dlt_openapi/renderer/default/templates/source.py.j2
+++ b/dlt_openapi/renderer/default/templates/source.py.j2
@@ -65,10 +65,10 @@ def {{ source_name }}(
                     {% endfor %}
                     {% endif %}
                     {% for param_name in endpoint.unresolvable_path_param_names %}
-                    "{{param_name}}": "{{ endpoint.default_for_param('path', param_name) }}", # TODO: fill in required path parameter
+                    "{{param_name}}": "{{ endpoint.default_for_param('path', param_name) }}", # TODO: fill in path parameter
                     {% endfor %}
                     {% for param_name in endpoint.unresolvable_query_param_names %}
-                    "{{param_name}}": "{{ endpoint.default_for_param('query', param_name) }}", # TODO: fill in required query parameter
+                    {% if not endpoint.is_query_param_required(param_name) %}# {% endif %}"{{param_name}}": "{{ endpoint.default_for_param('query', param_name) }}", # TODO: fill in query parameter
                     {% endfor %}
                 },
                 {% endif %}
