--- a/dlt_init_openapi/renderer/default/templates/pipeline.py.j2
+++ b/dlt_init_openapi/renderer/default/templates/pipeline.py.j2
@@ -8,7 +8,7 @@ if __name__ == "__main__":
         pipeline_name="{{ package_name}}_pipeline",
         destination='duckdb',
         dataset_name="{{ dataset_name }}",
-        full_refresh=False,
+        progress="log",
         export_schema_path="schemas/export"
     )
     source = {{ source_name }}()
