add source name to source section in secrets and config toml

--- a/dlt_init_openapi/renderer/default/templates/dlt_config.toml.j2
+++ b/dlt_init_openapi/renderer/default/templates/dlt_config.toml.j2
@@ -1,7 +1,7 @@
 [runtime]
 log_level="INFO"
 
-[sources]
+[sources.{{project_name}}]
 # Base URL for the API
 {% if first_server %}
 {% if first_server.description %}
