--- a/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
+++ b/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
@@ -1,3 +1,4 @@
 {% if credentials %}
+[sources.{{project_name}}]
 {{ credentials.detected_secret_name }} = "FILL ME OUT"  # TODO: fill in your credentials
 {% endif %}
