render auto paginator if not detected

--- a/dlt_init_openapi/renderer/default/templates/source.py.j2
+++ b/dlt_init_openapi/renderer/default/templates/source.py.j2
@@ -84,6 +84,9 @@ def {{ source_name }}(
                     {% endfor %}
                 },
                 {% endif %}
+                {% if endpoint.render_auto_paginator %}
+                "paginator": "auto",
+                {% endif %}
             }
         },
         {% endfor %}
