--- a/dlt_init_openapi/renderer/default/templates/source.py.j2
+++ b/dlt_init_openapi/renderer/default/templates/source.py.j2
@@ -51,7 +51,9 @@ def {{ source_name }}(
             {% endif %}
             {% endif %}
             "endpoint": {
+                {% if endpoint.data_json_path %}
                 "data_selector": "{{ endpoint.data_json_path }}",
+                {% endif %}
                 "path": "{{endpoint.path }}",
                 {% if endpoint.transformer or endpoint.unresolvable_path_param_names or endpoint.unresolvable_query_param_names %}
                 "params": {
