make username in basic auth a secret

--- a/dlt_init_openapi/renderer/default/templates/README.md.j2
+++ b/dlt_init_openapi/renderer/default/templates/README.md.j2
@@ -8,7 +8,7 @@ Created with [dlt-init-openapi](https://github.com/dlt-hub/dlt-init-openapi) v. 
 
 {% if credentials %}
 ## Credentials
-This API uses {{ credentials.type }} authentication. Please fill in the required variable {{ credentials.detected_secret_name }} in your 
+This API uses {{ credentials.type }} authentication. Please fill in the required variables {{ credentials.detected_secret_names }} in your 
 secrets.toml.
 {% endif %}
 
