--- a/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
+++ b/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
@@ -1,4 +1,6 @@
 {% if credentials %}
 [sources.{{project_name}}]
-{{ credentials.detected_secret_name }} = "FILL ME OUT"  # TODO: fill in your credentials
+{% for secret in credentials.detected_secret_names %}
+{{ secret }} = "FILL ME OUT"  # TODO: fill in your credentials
+{% endfor %}
 {% endif %}
