--- a/dlt_init_openapi/renderer/default/templates/source.py.j2
+++ b/dlt_init_openapi/renderer/default/templates/source.py.j2
@@ -10,7 +10,9 @@ from rest_api import rest_api_source
 @dlt.source(name="{{source_name}}", max_table_nesting=2)
 def {{ source_name }}(
         {% if credentials %}
-        {{ credentials.detected_secret_name }}: str = dlt.secrets.value,
+        {% for secret in credentials.detected_secret_names %}
+        {{ secret }}: str = dlt.secrets.value,
+        {% endfor %}
         {% endif %}
         base_url: str = dlt.config.value,
 ) -> List[DltResource]:
