always render secrets section add gitignore template file

--- a/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
+++ b/dlt_init_openapi/renderer/default/templates/dlt_secrets.toml.j2
@@ -1,6 +1,9 @@
-{% if credentials %}
 [sources.{{project_name}}]
+# secrets for your {{project_name}} source
+{% if credentials %}
 {% for secret in credentials.detected_secret_names %}
 {{ secret }} = "FILL ME OUT"  # TODO: fill in your credentials
 {% endfor %}
+{% else %}
+# example_api_key = "example value"
 {% endif %}
