improve description rendering and add it as a comment to the source output

--- a/dlt_init_openapi/renderer/default/templates/README.md.j2
+++ b/dlt_init_openapi/renderer/default/templates/README.md.j2
@@ -15,6 +15,6 @@ secrets.toml.
 ## Available resources
 {% for endpoint in endpoint_collection.all_endpoints_to_render %}
 * {{ endpoint.detected_resource_name }}  
-  _{{endpoint.method}} {{ endpoint.path }}_  
-  {% if endpoint.description %}{{endpoint.description}}{% endif %}
+  _{{endpoint.method}} {{ endpoint.path }}_  
+  {% if endpoint.render_description %}{{endpoint.render_description}}{% endif %}
 {% endfor %}
