--- a/dlt_init_openapi/renderer/default/templates/README.md.j2
+++ b/dlt_init_openapi/renderer/default/templates/README.md.j2
@@ -2,6 +2,11 @@
 
 Created with [dlt-init-openapi](https://github.com/dlt-hub/dlt-init-openapi) v. {{version}}
 
+{% if config.spec_path %}Generated from local spec at `{{ config.spec_path }}`.{% endif %}
+{% if config.spec_url %}Generated from downloaded spec at `{{ config.spec_url }}`{% endif %}
+
+## Learn more at
+
 * https://dlthub.com
 * https://github.com/dlt-hub/dlt
 * https://github.com/dlt-hub/dlt-init-openapi
