--- a/dlt_init_openapi/renderer/default/templates/README.md.j2
+++ b/dlt_init_openapi/renderer/default/templates/README.md.j2
@@ -19,7 +19,9 @@ secrets.toml.
 
 ## Available resources
 {% for endpoint in endpoint_collection.all_endpoints_to_render %}
-* {{ endpoint.detected_resource_name }}  
-  _{{endpoint.method}} {{ endpoint.path }}_  
-  {% if endpoint.render_description %}{{endpoint.render_description}}{% endif %}
+* _{{endpoint.method}} {{ endpoint.path }}_ 
+  *resource*: {{ endpoint.detected_resource_name }}  
+  {% if endpoint.render_description %}
+  *description*: {{endpoint.render_description}}
+  {% endif %}
 {% endfor %}
